# fastapi-testing

./: README.md  env-sample  pyproject.toml
src/fastapi_testing/: main.py
src/fastapi_testing/routers/: items.py  users.py
src/fastapi_testing/tests/: test_main.py
